	* Added method tx_solr_ConnectionManager::getConnectionsBySite()
	* Replaced occurrences of tx_solr_Util::getSiteHash() with tx_solr_Site->getSiteHash()
	* Changed the auto-complete script to now send a lowercased version of the term the user entered (renamed from term to termLowercase) and the original case version(termOriginal)

2011-06-11  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #27101: Error 500 at default installation via shell script, unable to load typo3-accessfilter

2011-05-24  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #26807: Bug in try/catch in reports module
	* Fixed issue #25723: Missing proper escaping in scheduler tasks, credits Georg Ringer

2011-05-17  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed suggest queries, which were broken due to the removal of q.alt in solrconfig.xml
	* Added methods setAlternativeQuery() and getAlternativeQuery() to tx_solr_Query

2011-05-16  Ingo Renner  <ingo.renner@dkd.de>

	* Updated install-solr.sh to use the current tomcat version and Solr plugin install directory
	* Added Solr multicore configuration

2011-04-12  Ingo Renner  <ingo.renner@dkd.de>

	* Cleaned up solrconfig.xml, removed unnecessary example configuration, enabled php and phpcs response writers, data import handler

2011-04-06  Ingo Renner  <ingo.renner@dkd.de>

	* Updated schema.xml and solrconfig.xml to match the EAP version

2011-02-28  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed an issue which resulted in sorting not working anymore

2011-02-22  Ingo Renner  <ingo.renner@dkd.de>

	* Changed version number to 1.4.0-dev

2011-02-22  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v1.3.0

	* Added tx_solr_AdditionalFieldsIndexer to take care of indexing fields as defined in plugin.tx_solr.index.additionalFields
	* Removed unused method tx_solr_Typo3Environment::isFileadminEnabledWhileUsingDam()
	* Added refactored indexer
	* Added utility method tx_solr_Util::getRootPageId()
	* Added a way to register additional plugin commands