@@ -48,7 +48,8 @@ plugin.tx_solr {
 
 		targetPage = 0
 
-		allowEmptyQuery = 0
+		initializeWithEmptyQuery = 0
+		showResultsOfInitialEmptyQuery = 0
 
 		query {
 			fields = content^40.0, title^5.0, keywords^2.0, tagsH1^5.0, tagsH2H3^3.0, tagsH4H5H6^2.0, tagsInline^1.0
