@@ -21,6 +21,9 @@
 	* Added method tx_solr_ConnectionManager::getConnectionsBySite()
 	* Replaced occurrences of tx_solr_Util::getSiteHash() with tx_solr_Site->getSiteHash()
 	* Changed the auto-complete script to now send a lowercased version of the term the user entered (renamed from term to termLowercase) and the original case version(termOriginal)
+	* Removed option allowEmptyQuery
+	* Added options initializeWithEmptyQuery, showResultsOfInitialEmptyQuery as replacement for allowEmptyQuery
+	* Added methods setAlternativeQuery() and getAlternativeQuery() to tx_solr_Query
 
 2011-06-11  Ingo Renner  <ingo.renner@dkd.de>
 
